@@ -55,7 +55,9 @@
 #define __ffcrtb(A, B, C, D, E, F, G, H, I) ffcrtb(A, B, C, D, E, F, G, H, I)
 #define __ffdcol(A, B, C) ffdcol(A, B, C)
 #define __ffdelt(A, B) ffdelt(A, B)
+#define __ffdhdu(A, B, C) ffdhdu(A, B, C)
 #define __ffdrow(A, B, C, D) ffdrow(A, B, C, D)
+#define __ffgabc(A, B, C, D, E, F) ffgabc(A, B, C, D, E, F)
 #define __ffgcv(A, B, C, D, E, F, G, H, I, J) ffgcv(A, B, C, D, E, F, G, H, I, J)
 #define __ffgcvb(A, B, C, D, E, F, G, H, I) ffgcvb(A, B, C, D, E, F, G, H, I)
 #define __ffgcvs(A, B, C, D, E, F, G, H, I) ffgcvs(A, B, C, D, E, F, G, H, I)
@@ -75,9 +77,13 @@
 #define __ffgncl(A, B, C) ffgncl(A, B, C)
 #define __ffgsv(A, B, C, D, E, F, G, H, I) ffgsv(A, B, C, D, E, F, G, H, I)
 #define __ffgtcl(A, B, C, D, E, F) ffgtcl(A, B, C, D, E, F)
+#define __ffibin(A, B, C, D, E, F, G, H, I) ffibin(A, B, C, D, E, F, G, H, I)
 #define __fficol(A, B, C, D, E) fficol(A, B, C, D, E)
+#define __ffiimg(A, B, C, D, E) ffiimg(A, B, C, D, E)
+#define __ffiimgll(A, B, C, D, E) ffiimgll(A, B, C, D, E)
 #define __ffinit(A, B, C) ffinit(A, B, C)
 #define __ffirow(A, B, C, D) ffirow(A, B, C, D)
+#define __ffitab(A, B, C, D, E, F, G, H, I, J) ffitab(A, B, C, D, E, F, G, H, I, J)
 #define __ffopen(A, B, C, D) ffopen(A, B, C, D)
 #define __ffmahd(A, B, C, D) ffmahd(A, B, C, D)
 #define __ffpcn(A, B, C, D, E, F, G, H, I) ffpcn(A, B, C, D, E, F, G, H, I)
@@ -123,7 +129,9 @@ typedef fitsfile __fitsfile;
 #define __ffcrtb(A, B, C, D, E, F, G, H, I) __dummy()
 #define __ffdcol(A, B, C) __dummy()
 #define __ffdelt(A, B) __dummy()
+#define __ffdhdu(A, B, C) __dummy()
 #define __ffdrow(A, B, C, D) __dummy()
+#define __ffgabc(A, B, C, D, E, F) __dummy()
 #define __ffgcv(A, B, C, D, E, F, G, H, I, J) __dummy()
 #define __ffgcvb(A, B, C, D, E, F, G, H, I) __dummy()
 #define __ffgcvs(A, B, C, D, E, F, G, H, I) __dummy()
@@ -143,9 +151,13 @@ typedef fitsfile __fitsfile;
 #define __ffgncl(A, B, C) __dummy()
 #define __ffgsv(A, B, C, D, E, F, G, H, I) __dummy()
 #define __ffgtcl(A, B, C, D, E, F) __dummy()
+#define __ffibin(A, B, C, D, E, F, G, H, I) __dummy()
 #define __fficol(A, B, C, D, E) __dummy()
+#define __ffiimg(A, B, C, D, E) __dummy()
+#define __ffiimgll(A, B, C, D, E) __dummy()
 #define __ffinit(A, B, C) __dummy()
 #define __ffirow(A, B, C, D) __dummy()
+#define __ffitab(A, B, C, D, E, F, G, H, I, J) __dummy()
 #define __ffmahd(A, B, C, D) __dummy()
 #define __ffpcn(A, B, C, D, E, F, G, H, I) __dummy()
 #define __ffopen(A, B, C, D) __dummy()
